# open_with

./: Cargo.toml  README.md
src/: lib.rs  lib_linux.rs  lib_macos.rs  lib_windows.rs
src/lib_linux/: org_freedesktop_filemanager1.rs  org_freedesktop_portal_openuri.rs
src/lib_macos/: payloads.rs
